# SC-PGO

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: btc_config.yaml  btc_config_mid360.yaml  btc_config_optimized.yaml  btc_config_outdoor.yaml  gicp_config.yaml
include/: dynamic_remove.hpp
include/btc/: btc.h
include/gicp_registration/: gicp_registration.hpp
include/scancontext/: Scancontext.h  tic_toc_stub.h
launch/: sc_pgo.launch.py
rviz_cfg/: aloam_velodyne.rviz
src/: btc.cpp  btc_python_binding.cpp  dynamic_remove.cpp  gicp_python_binding.cpp  gicp_registration.cpp  laserPosegraphOptimization.cpp  sc_python_binding.cpp
utils/python/: BTC_CPP_BINDING_BUILD.md  README.md  btc_common.py  loop_closure_common.py  makeMergedMap.py  offline_loop_closure.py
